custom error pages; new page footer.

--- a/geometriki/public/stylesheet.css
+++ b/geometriki/public/stylesheet.css
@@ -65,3 +65,4 @@ form .openid_url {
   padding-left: 18px;
 }
 .error { color: red }
+.error #bd { color: black ; background: #fee; border: 2px solid #f00 }
