--- a/geometriki/public/css/stylesheet.css
+++ b/geometriki/public/css/stylesheet.css
@@ -16,6 +16,7 @@ strong { font-weight: bolder }
 em { font-style: italic }
 blockquote { margin: 1em; padding: 1em; border: 2px solid #eee }
 textarea { padding-left: 3px }
+dl dd { padding-left: 1em; }
 
 /* header and footer: diminished visibility, separation from content, some items float right */
 #hd { color: #444; }
@@ -62,7 +63,7 @@ textarea { width: 100%; font-family: monospace }
 /* ...other custom styles... */
 
 form .openid_url {
-  background: #fff url('/openid-login-bg.gif') no-repeat scroll 0pt 50%;
+  background: #fff url('/images/openid-login-bg.gif') no-repeat scroll 0pt 50%;
   padding-left: 18px;
 }
 .error { color: red }
